--- a/glowna_zal.html
+++ b/glowna_zal.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html lang="pl">
+<html lang="en">
 <head>
-    <title>Strona główna</title>
+    <meta charset="UTF-8">
+    <title>Strona główna - użytkownik zalogowany</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
@@ -81,8 +82,7 @@
         color: orange;
     }
 
-    .page-footer
-    {
+    .page-footer {
         margin-top: 150px;
         background-color: lightgray;
     }
@@ -206,7 +206,8 @@
                         <a href="https://www.mp.pl/pacjent/chorobawiencowa/zawal/62035,zawal-serca">Zawał serca</a>
                     </li>
                     <li>
-                        <a href="https://www.mp.pl/pacjent/reumatologia/choroby/63732,reumatoidalne-zapalenie-stawow">Zapalenie stawów</a>
+                        <a href="https://www.mp.pl/pacjent/reumatologia/choroby/63732,reumatoidalne-zapalenie-stawow">Zapalenie
+                            stawów</a>
                     </li>
                 </ul>
 
